# sharklog

./: .gitignore  CHANGES  CMakeLists.txt  COPYING  README  README.md  Vagrantfile  sharklog.vpj
lib/: CMakeLists.txt
lib/docs/: Doxyfile.in
lib/docs/style/: DoxygenLayout.xml
lib/sharklog/: Logger.cpp  Logger.h  UtilFunctions.cpp  UtilFunctions.h  basicconfig.cpp  basicconfig.h  basicfileconfig.cpp  basicfileconfig.h  consoleoutputter.cpp  consoleoutputter.h  fileoutputter.cpp  fileoutputter.h  functrace.cpp  functrace.h  layout.cpp  layout.h  level.cpp  level.h  location.cpp  location.h  logger.cpp  logger.h  loggerstream.cpp  loggerstream.h  outputter.cpp  outputter.h  sharklogdefs.h  standardlayout.cpp  standardlayout.h  utilfunctions.cpp  utilfunctions.h
loggertest/: CMakeLists.txt
loggertest/src/: main.cpp
provision/: chocolatey.ps1  packages.bat
unittest/: CMakeLists.txt
unittest/src/: UtilFunctionsTest.cpp  UtilFunctionsTest.h  basicconfigtest.cpp  basicconfigtest.h  basicfileconfigtest.cpp  basicfileconfigtest.h  consoleoutputtertest.cpp  consoleoutputtertest.h  fileoutputtertest.cpp  fileoutputtertest.h  functracetest.cpp  layouttest.cpp  leveltest.cpp  leveltest.h  locationtest.cpp  loggerstreamtest.cpp  loggerstreamtest.h  loggertest.cpp  loggertest.h  main.cpp  outputtertest.cpp  standardlayouttest.cpp  standardlayouttest.h  utilfunctionstest.cpp
